maze.lessons.maze.island.IslandMaze.scala.error
Escaper:18: error: not found: value n
      while(n!=0){
            ^